# printboard

./: .gitignore  CHANGELOG.md  LICENSE  README-zh.md  README.md  pyproject.toml  requirements.txt
.claude/: plan.md  settings.json
.github/workflows/: ci.yml
examples/: basic_demo.py  custom_pattern.py
printboard/: __init__.py  decorator.py  parser.py  utils.py  writer.py
tests/: conftest.py  test_decorator.py  test_integration.py  test_parser.py  test_utils.py  test_writer.py
